Use established Android-compatible file APIs